[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/BoxColliders/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/BoxColliders/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Creatures/Creature.gd" type="Script" id=3]

[node name="Creature" type="KinematicBody2D"]
z_index = 3
collision_layer = 4
collision_mask = 7
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 32

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
collision_mask = 16

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="PoisonTimer" type="Timer" parent="."]

[node name="FreezeTimer" type="Timer" parent="."]
[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_viewport_exited"]
[connection signal="timeout" from="PoisonTimer" to="." method="_on_PoisonTimer_timeout"]
[connection signal="timeout" from="FreezeTimer" to="." method="_on_FreezeTimer_timeout"]
